# RAT_projet2

./: .gitignore  install.sh
RAT_projet-main/: .gitignore
RAT_projet-main/rat/: Cargo.toml  Makefile  agent.env.example
RAT_projet-main/rat/agent/: Cargo.toml
RAT_projet-main/rat/agent/src/: config.rs  error.rs  main.rs  register.rs  run.rs  wordlist.rs
RAT_projet-main/rat/agent/src/install/: macos.rs
RAT_projet-main/rat/client/: Cargo.toml
RAT_projet-main/rat/client/src/: config.rs  main.rs
RAT_projet-main/rat/client/src/api/: create_job.rs  get_agent.rs  get_job_result.rs  list_agents.rs
RAT_projet-main/rat/common/: Cargo.toml
RAT_projet-main/rat/server/: Cargo.toml
RAT_projet-main/shellcode/executor/src/: main.rs
web_manager/: README.md  app.py
web_manager/templates/: index.html
