[package]
name = "client"
version = "0.1.0"
authors = ["Saladino Belisario <SaladinoBelisario@protonmail.ch>"]
edition = "2021"

[dependencies]
common = { path = "../common" }

clap            = "2.33"
anyhow          = "1.0"
thiserror       = "1.0"
base64          = "0.13"
dotenv          = "0.15"

# uuid must match common (uuid 1.x)
uuid            = { version = "1", features = ["serde", "v4"] }

# HTTP client
reqwest         = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# UI
prettytable-rs  = "0.10"

# Crypto — align versions across all crates
ed25519-dalek   = "1"
rand            = "0.7"
x25519-dalek    = "1"
chacha20poly1305 = "0.9"
blake2          = "0.9"
serde_json      = "1"
zeroize         = "1"
